pkl-core/src/test/files/LanguageSnippetTests/input/errors/anyConverterError.pkl
class Dog {
  age: Int
}

output {
  renderer = new PcfRenderer {
    converters {
      [Any] = (o) -> o.getClass().toString()
    }
  }
}
